tests/paczka1/small_fuzzy/21303172.err
Error in line 2: S312 A668 7,7
Error in line 3: S312 A623 83,5
Error in line 6: 75n9f S650 36,9
